client/src/pages/Home/components/Skill/SkillView.module.css
.container{
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    margin: 1em;
    border-radius: 30px;
    background-color: white;
    color: #212121;
    width: 19em;
    transition-duration: 0.4s;
}

.container:hover, .container:focus, .container:active{
    background-color: #f5f5f5;
    transform: scale(1.03);
    -webkit-box-shadow: 0 0 20px #000;
        box-shadow: 0 0 20px #000;
}
.container span{
    font-size: 1.5em;
    margin: 1em;
    text-align: center;
}
.container hr{
    margin-top: 10%;
    border-top: 2px solid #707070;
    width: 25%;
}
.container img{
    padding: 2em 2em 0em 2em;
    width: 14em;
    height: 14em;
}

@media (max-width: 1440px) {
    .container img{
        padding: 1em 1em 0em 1em;
        width: 7em;
        height: 7em;
    }
    .container{
        border-radius: 15px;
        width: 12em;
        height: 18em;
    }
}
@media (max-width: 1024px) {
    .container img{
        padding: 1em 1em 0em 1em;
        width: 9em;
        height: 9em;
    }
    .container{
        border-radius: 15px;
        width: 12em;
        height: 18em;
    }
}
@media (max-width: 500px) {
    .container img{
        padding: 1em 1em 0em 1em;
        width: 11em;
        height: 11em;
    }
    .container{
        border-radius: 15px;
        width: 14em;
    }
}

